# vcmi

./: .gitignore  CMakeLists.txt
client/: CMT.cpp  CMT.h  CMakeLists.txt  clientmain.cpp
client/gui/: CAnimation.cpp  CCursorHandler.cpp  CGuiHandler.cpp
lib/filesystem/: AdapterLoaders.cpp
qtheroes3/: CMakeLists.txt  client.cpp  client.hpp  clientmain.cpp  heroes3.pro  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  server.cpp  servermain.cpp
